latest post trying the text-align bug fix

--- a/assets/css/3-sections/_home-latestpost.sass
+++ b/assets/css/3-sections/_home-latestpost.sass
@@ -2,7 +2,9 @@ section.latestpost
     background: white
     
     .flex.flexcenter
+        text-align: center
         .col-2
+            text-align: left
             margin: 24px 0 54px 0
             
             .home-cta
